# gamingxpo

./: .claudeignore  .env.example  .gitignore  CLAUDE-TEMPLATE.md  CLAUDE.md  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs
docs/superpowers/plans/: 2026-05-14-gamingxpo-website.md  2026-05-15-manus-inspired-premium-refresh.md  2026-05-15-portfolio-project-level.md
docs/superpowers/specs/: 2026-05-14-gamingxpo-website-design.md  2026-05-15-manus-inspired-premium-refresh.md
public/: robots.txt
src/components/: CaseCard.astro  ContactSplit.astro  CtaBand.astro  FilterBar.astro  Footer.astro  Hero.astro  Logo.astro  MarqueeBrands.astro  MetricStrip.astro  Nav.astro  SEO.astro  SectionHeader.astro  ServiceTile.astro  Team.astro  Testimonials.astro
src/content/: config.ts
src/content/services/: av-tech.md  branding.md  build.md  design.md  on-site.md
src/data/: portfolio.json  projects.json  team.json
src/layouts/: Base.astro
src/pages/: 404.astro  about.astro  contact.astro  index.astro  portfolio.astro  services.astro  styleguide.astro
src/pages/portfolio/: [project].astro  [slug].astro
src/styles/: global.css
tools/: _common.py  augment_portfolio_metadata.py  build_raw_manifest.py  classify_logos.py  dedup.py  inpaint_watermarks.py  optimize_images.mjs  optimize_images.py  scrape_instagram.py  scrape_pavilhao3.py  scrape_pavilhao3_deep.py  scrape_project_pages.py  sync_team_data.py
tools/tests/: test_classify_logos.py  test_dedup.py  test_scrape_pavilhao3.py
workflows/: scrape_and_clean_images.md
(+374 files in other folders)
